# Django-basic

./: .gitignore  pyproject.toml
blog/: urls.py  views.py
blog/templates/blog/: index.html  post.html
home/: urls.py  views.py
home/templates/: index.html
src/: settings.py  urls.py
static/global/css/: style.css
templates/global/: base.html
templates/global/partials/: head.html  menu.html  post_block.html
