[tool.poetry]
name = "django-basic"
version = "0.1.0"
description = ""
authors = ["Rui Meira <rui.meira@revolut.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
black = "^24.4.2"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
